# dtos/post_get_dto.go
@@ -1,0 +1,7 @@
+package dtos
+
+type PostGetDTO struct {
+	Title   string `json:"title"`
+	Content string `json:"content"`
+	PostID  uint   `json:"post_id"`
+}
